// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svelte multipleOnUpdate 1`] = `
"<script>
  import { afterUpdate } from \\"svelte\\";

  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });

</script>

<div />
"
`;

exports[`Svelte onUpdate 1`] = `
"<script>
  import { afterUpdate } from \\"svelte\\";

  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender\\");
  });

</script>

<div />
"
`;

exports[`Svelte selfReferencingComponent 1`] = `
"<script>
  export let name;

</script>

<div>
  {name}

  {#if name === 'Batman'}
    <svelte:self name={'Bruce Wayne'} />
  {/if}
</div>
"
`;

exports[`Svelte selfReferencingComponentWithChildren 1`] = `
"<script>
  export let name;

</script>

<div>
  {name}

  <slot />

  {#if name === 'Batman'}
    <svelte:self name={'Bruce'}>
      <div>Wayne</div>
    </svelte:self>
  {/if}
</div>
"
`;
